# Pathwise

./: .env.example  .gitignore  AUTOJOBFLOW_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK_COMPLETION_CHECKLIST.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  data.py  models.py  pyproject.toml  reports.py
backend/alembic/: env.py
backend/alembic/versions/: 20241017_01_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py  routes.py
backend/app/api/v1/: __init__.py  analyze.py
backend/app/core/: __init__.py  celery_app.py  config.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/db/models/: __init__.py  comparison.py  resume.py  user.py
backend/app/schemas/: __init__.py  analysis.py  base.py  comparison.py  resume.py  user.py
backend/app/tasks/: example.py
frontend/: .env.example  .eslintrc.json  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  middleware.ts  netlify.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  index.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/auth/: sign-in-form.tsx
frontend/components/job-swiper/: job-card.tsx  job-details-modal.tsx  swipe-actions.tsx  swipe-stack.tsx
frontend/components/landing/: features.tsx  hero.tsx
frontend/components/navigation/: auth-actions.tsx  theme-toggle.tsx
frontend/components/onboarding/: role-selector.tsx
frontend/components/providers/: session-provider.tsx
frontend/components/resume/: resume-uploader.tsx
frontend/lib/: utils.ts
frontend/prisma/: schema.prisma
frontend/types/: next-auth.d.ts  third-party.d.ts
tests/: test_reports.py
(+22 files in other folders)
