[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathwise"
version = "0.1.0"
description = "Export utilities and API for Pathwise reports"
authors = [{ name = "Pathwise" }]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "reportlab>=4.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
