[tool.poetry]
name = "pathwise-backend"
version = "0.1.0"
description = "FastAPI backend for the Pathwise platform"
readme = "README.md"
authors = ["Pathwise <engineering@pathwise.ai>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.30"
alembic = "^1.13.2"
psycopg = { version = "^3.1.18", extras = ["binary"] }
celery = "^5.4.0"
redis = "^5.0.4"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
spacy = "^3.7.4"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
transformers = "^4.40.0"
httpx = "^0.27.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.4"
pytest = "^8.2.0"
coverage = "^7.5.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "I", "N", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
